menambahkan div test

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             </div>
         </div>
     </section>
+    <div class="test">
 
+    </div>
 
     <script src="script.js"></script>
 </body>
