--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Prakash Shahi</div>
+                                <div class="sub-title">Mohamad Reza Kurniawan</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
+                                <div class="sub-title">Kp. Tanjung RT.04/01 Desa. Suka asih</div>
                             </div>
                         </div>
                         <div class="row">
