--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
+                                <div class="sub-title">mohamadrezakurniawan@gmail.com</div>
                             </div>
                         </div>
                     </div>
