--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Mohamad reza kurniawan</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="login.html">Login</a>
             </div>
         </div>
     </section>
